--- a/COMP214 - Project/Web.config
+++ b/COMP214 - Project/Web.config
@@ -11,9 +11,9 @@
 	
 	<appSettings/>
 	<connectionStrings>
-		<add name="Dorknozzle" connectionString="Data Source=localhost:1521/orcl;User Id=Ostap;Password=password" providerName="Oracle.ManagedDataAccess.Client"/>
-		<remove name="LocalSqlServer"/>
-		<add name="LocalSqlServer" connectionString="DATA SOURCE=localhost:1521/orcl;USER ID=OSTAP;PASSWORD=password" providerName="Oracle.ManagedDataAccess.Client"/>
+		<add name="Dorknozzle" connectionString="DATA SOURCE=ORCL;USER ID=OSTAP;PASSWORD=password" providerName="Oracle.ManagedDataAccess.Client"/>
+    <!--<remove name="LocalSqlServer"/>
+		<add name="LocalSqlServer" connectionString="DATA SOURCE=ORCL;USER ID=OSTAP;PASSWORD=password" providerName="Oracle.ManagedDataAccess.Client"/>-->
 	</connectionStrings>
 	<system.web>
 		<!-- 
@@ -39,9 +39,14 @@
             ASP.NET to identify an incoming user. 
         -->
 		<authentication mode="Forms">
+      <forms>
+        <credentials>
+          <user name="ostap" password="ola"/>
+        </credentials>
+      </forms>
 		</authentication>
 		<authorization>
-			<deny users="?"/>
+			<allow users="?"/>
 		</authorization>
 		<membership>
 			<providers>
